# h1_control

./: .gitignore  README.md
h1_description/config/: default.yaml
h1_description/config/command/: reference.info
h1_description/config/mpc/: task.info
h1_description/launch/: control_test.launch  control_test_fix.launch  gazebo.launch
h1_description/rviz/: h1.rviz
h1_description/urdf/: h1_cbf.urdf  h1_cbf_control.urdf  h1_cbf_fix.urdf  h1_dynamic.urdf  h1_dynamic_problem.urdf
humanoid_dummy/: CMakeLists.txt
humanoid_dummy/launch/: legged_robot_sqp.launch
humanoid_dummy/src/: H1GaitCommandNode.cpp  HumanoidPoseCommandNode.cpp
humanoid_dummy/src/visualization/: HumanoidVisualizer.cpp
humanoid_interface/include/humanoid_interface/common/: ModelSettings.h
humanoid_interface/src/: HumanoidInterface.cpp
humanoid_wbc/src/: WbcBase.cpp  WeightedWbc.cpp
legged_controllers/: CMakeLists.txt  legged_controllers_plugins.xml  package.xml
legged_controllers/config/: controllers.yaml
legged_controllers/config/h1/: h1.urdf  reference.info  task.info
legged_controllers/include/legged_controllers/: LeggedController.h
legged_controllers/launch/: change_position.py  init.py  load_controller.launch  one-start.launch  test.launch
legged_controllers/src/: LeggedController.cpp  TargetTrajectoriesPublisher.cpp
legged_estimation/src/: FromTopicEstimate.cpp
legged_gazebo/config/: default.yaml
legged_interface/src/foot_planner/: MultiCubicSpline.cpp
test_controller/: CMakeLists.txt  package.xml  test_controller_plugins.xml
test_controller/config/: controllers.yaml
test_controller/launch/: test_controller.launch
test_controller/src/: test_controller.cpp
