<?xml version="1.0"?>
<package format="2">
  <name>test_controller</name>
  <version>0.0.1</version>
  <description>A ROS controller that prints out joint information.</description>

  <maintainer email="your_email@example.com">Your Name</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>controller_interface</build_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>pluginlib</build_depend>


  <exec_depend>roscpp</exec_depend>
  <exec_depend>controller_interface</exec_depend>
  <exec_depend>hardware_interface</exec_depend>
  <exec_depend>pluginlib</exec_depend>

  <depend>legged_common</depend>
  
  <export>
    <controller_interface plugin="${prefix}/test_controller_plugins.xml"/>
  </export>
</package>
